<resources>
    <string name="app_name">Lost &amp; Found APP</string>
    <string name="show_all_lost_found_items"><![CDATA[SHOW ALL LOST & FOUND ITEMS]]></string>
    <string name="create_a_new_advert">CREATE A NEW ADVERT</string>
    <string name="location">Location</string>
    <string name="select_date">Select Date</string>
    <string name="title_activity_new_advert">NewAdvertActivity</string>
    <string name="save">Save</string>
    <string name="description">Description</string>
    <string name="phone">Phone</string>
    <string name="name">Name</string>
    <string name="new_advert">New Advert</string>
    <string name="lost">Lost</string>
    <string name="found">Found</string>
    <string name="post_type">Post Type</string>
    <string-array name="location_array">
        <item>Select location</item> <!-- This is the placeholder -->
        <item>Melbourne Burwood Campus</item>
        <item>Geelong Waurn Ponds Campus</item>
        <item>Geelong Waterfront Campus</item>
        <item>Warrnambool Campus</item>
    </string-array>
    <string name="title_activity_item_list">ItemListActivity</string>
    <string name="cancel">Cancel</string>
    <string name="lost_and_found_items">LOST AND FOUND ITEMS</string>
    <string name="title_activity_advert_detail">AdvertDetailActivity</string>

</resources>

