<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".NewAdvertActivity">

    <!-- Toolbar with TextView as title -->
    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:minHeight="?actionBarSize"
        android:paddingHorizontal="16dp"
        android:paddingVertical="15dp"
        android:theme="?actionBarTheme">

        <TextView
            style="@style/Widget.MaterialComponents.TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/new_advert"
            android:textColor="@color/black"
            android:textSize="25sp"
            android:textStyle="bold"
            />
    </androidx.appcompat.widget.Toolbar>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:text="@string/post_type"
        android:textSize="16sp"
        android:textStyle="bold" />

    <RadioGroup
        android:id="@+id/postTypeGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/radioLost"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lost" />

        <RadioButton
            android:id="@+id/radioFound"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/found"
            android:layout_marginStart="20dp" />
    </RadioGroup>

    <!-- Name -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/nameInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:hint="@string/name">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/phoneInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:hint="@string/phone">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/descriptionInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:hint="@string/description">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine"/>

    </com.google.android.material.textfield.TextInputLayout>

    <!-- Location Dropdown -->
    <Spinner
        android:id="@+id/locationSpinner"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_margin="10dp"
        android:spinnerMode="dropdown"/>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/advertDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        >

        <Button
            android:id="@+id/datePickerButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="30dp"
            android:paddingVertical="20dp"
            android:text="@string/select_date"
            />

    </com.google.android.material.textfield.TextInputLayout>


    <!-- Save Button -->
    <Button
        android:id="@+id/saveTask"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:paddingHorizontal="30dp"
        android:paddingVertical="20dp"
        android:text="@string/save"
        android:textSize="15sp"
        android:textStyle="bold"
        />

    <!-- Cancel Button -->
    <Button
        android:id="@+id/cancelTask"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:paddingHorizontal="30dp"
        android:paddingVertical="20dp"
        android:text="@string/cancel"
        android:textSize="15sp"
        android:textStyle="bold"
        />


</LinearLayout>
